force-app/main/default/objects/nFORCE__Feature__mdt/nFORCE__Feature__mdt.object-meta.xml
<CustomObject>
    <description>Lists the business components available for configuration and consumption.</description>
    <label>Feature</label>
    <pluralLabel>Features</pluralLabel>
</CustomObject>