force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Developer_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Developer_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the feature should automatically enabled when the package is installed.</description>
    <label>Developer Enabled</label>
    <type>Checkbox</type>
</CustomField>