force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__LMO_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__LMO_Enabled__c</fullName>
    <description>The field is optional. The field specifies Subscriber to LMO Salesforce Feature Parameter that is associated with the feature. If specified the feature parameter will be updated to reflect the current state of the feature. The fully qualified name of the parameter should be used, for example NAMESPACE__FEATUREPARAMETER.</description>
    <label>Enabled Feature Parameter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>