force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__LMO_Permitted__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__LMO_Permitted__c</fullName>
    <description>The field is optional. The field specifies the LMO to Subscriber Salesforce Feature Parameter that is associated with the feature. If specified the feature parameter will used to determine if the feature is permitted. The fully qualified name of the parameter should be used, for example NAMESPACE__FEATUREPARAMETER.</description>
    <label>Permitted Feature Parameter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>