force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Parent_Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Feature_Name__c</fullName>
    <description>The field is optional. It indicates the developer name of the parent feature. A parent feature must be enabled before a feature can be enabled.</description>
    <label>Parent Feature Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>