force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Patch_Version__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Patch_Version__c</fullName>
    <description>This field indicates the current Patch Version of the feature.</description>
    <label>Patch Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>