force-app/main/default/objects/nFORCE__Feature__mdt/fields/nFORCE__Version__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Version__c</fullName>
    <description>-DEPRECATED- Deprecated field, no longer in use.</description>
    <inlineHelpText>-DEPRECATED-</inlineHelpText>
    <label>-D Version</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>